--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -4,6 +4,9 @@
 
 @layer base {
   :root {
+    --twitter-blue: 203 89% 53%;
+    --twitter-like: 332 95% 54%;
+    --twitter-retweet: 114 100% 37%;
     --background: 0 0% 100%;
     --foreground: 0 0% 3.9%;
     --card: 0 0% 100%;
@@ -27,6 +30,9 @@
   }
 
   .dark {
+    --twitter-blue: 203 89% 53%;
+    --twitter-like: 332 95% 54%;
+    --twitter-retweet: 114 100% 37%;
     --background: 0 0% 3.9%;
     --foreground: 0 0% 98%;
     --card: 0 0% 3.9%;
